--- a/src/ui/Pop.css
+++ b/src/ui/Pop.css
@@ -4,22 +4,22 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  z-index: 99;
 }
 
 .popup-inner {
   position: relative;
-  padding: 32px;
+  padding: 2rem;
+  margin: 2rem;
   width: 100%;
+  height: auto;
   max-width: 640px;
   background-color: #fff;
-}
-
-.popup-inner .close-btn {
-  position: absolute;
-  top: 16px;
-  right: 16px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
 }
