--- a/src/ui/Pop.css
+++ b/src/ui/Pop.css
@@ -1,20 +1,20 @@
 .popup {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-start; */
   z-index: 99;
 }
 
 .popup-inner {
   position: relative;
   padding: 2rem;
-  margin: 2rem;
+  margin: 2rem auto;
   width: 100%;
   height: auto;
   max-width: 640px;
